+ GitRevCount as build number